<project xmlns="http://maven.apache.org/POM/4.0.0"
	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<groupId>il.org.spartan</groupId>
	<artifactId>il.org.spartan.Main</artifactId>
	<version>${project.version}</version>
	<name>Main</name>
	<packaging>pom</packaging>
	<properties>
		<project.version>2.13.5-SNAPSHOT</project.version>
		<maven.compiler.source>14</maven.compiler.source>
		<maven.compiler.target>14</maven.compiler.target>
	</properties>
	<build>
		<pluginManagement>
			<plugins>
				<plugin>
					<artifactId>maven-compiler-plugin</artifactId>
					<configuration>
						<release>14</release>
						<compilerArgs>
							--enable-preview
						</compilerArgs>
					</configuration>
				</plugin>
			</plugins>
		</pluginManagement>
	</build>
	<dependencies>
		<dependency>
			<groupId>junit</groupId>
			<artifactId>junit</artifactId>
			<version>4.12</version>
		</dependency>
	</dependencies>
	<modules>
		<module>fluent.ly</module>
		<module>spartan</module>
		<module>spartanizer-plugin</module>
	</modules>
</project>